# jcd

./: .gitignore  ANIMATION_DEMO.md  Cargo.toml  LICENSE  README.md  VERSION  comprehensive_animation_test.sh  debug_binary_call.sh  install.sh  jcd_function.sh  mcd_function.sh  reproduce_slash_bug.sh  test_animation.sh  test_animation_position.sh  test_slash_fix_final.sh  test_slash_issue.sh  test_subdirectory_exploration.sh  test_trailing_slash_complete.sh  test_trailing_slash_fallback.sh  test_trailing_slash_fix.sh
.github/: copilot-instructions.md
.rpm/: jcd.spec
mcd/: comprehensive_bug_test.sh  test_runner.sh
mcd/src/: main.rs
mcd/tests/: integration_test.rs
mcd/tests/fixtures/: cleanup_test_dirs.sh  setup_test_dirs.sh
mcd/tests/integration/: cycling_tests.rs  edge_case_tests.rs  mod.rs  tab_completion_tests.rs
mcd/tests/unit/: completion_tests.rs  mod.rs  search_tests.rs  sorting_tests.rs
src/: main.rs
templates/: build.yaml
test_absolute_consistency/tmp/foo/: test_regression_fix.sh
tests/: README.md  final_absolute_path_test.sh  quick_regression_test.sh  run_all_tests.sh  simple_test.sh  test_absolute_bug.sh  test_absolute_path_consistency.sh  test_regression_fix.sh  test_relative_comprehensive.sh  validate_mcd.sh  verify_basic_functionality.py
